utils/hostedcluster/workloads/03-kubeinvaders/kubeinvaders-targets.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: targets
spec:
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: registry.hypershiftbm.lab:5000/library/nginx:1.14.2
        name: nginx
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
          - name: config-vol
            mountPath: /etc/nginx/
      volumes:
        - name: config-vol
          configMap:
            name: nginx-config
            items:
              - key: nginx.conf
                path: nginx.conf
