utils/hostedcluster/workloads/03-kubeinvaders/render.yaml
---
# Source: kubeinvaders/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeinvaders
  labels:
    app.kubernetes.io/name: kubeinvaders
    helm.sh/chart: kubeinvaders-1.9.6
    app.kubernetes.io/instance: kubeinvaders
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http

  selector:
    app.kubernetes.io/name: kubeinvaders
    app.kubernetes.io/instance: kubeinvaders
---
# Source: kubeinvaders/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeinvaders
  labels:
    app.kubernetes.io/name: kubeinvaders
    helm.sh/chart: kubeinvaders-1.9.6
    app.kubernetes.io/instance: kubeinvaders
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubeinvaders
      app.kubernetes.io/instance: kubeinvaders
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubeinvaders
        app.kubernetes.io/instance: kubeinvaders
        app.kubernetes.io/managed-by: Helm
      annotations:
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: kubeinvaders
      containers:
        - env:
          - name: ENDPOINT
            value: kubeinvaders.apps.hosted.hypershiftbm.lab
          - name: NAMESPACE
            value: targets
          - name: ALIENPROXIMITY
            value: "10"
          - name: HITSLIMIT
            value: "1"
          - name: UPDATETIME
            value: "0.5"
          name: kubeinvaders
          image: "registry.hypershiftbm.lab:5000/luckysideburn/kubeinvaders:v1.9.6"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kubeinvaders
  namespace: "kubeinvaders"
spec:
  host: "kubeinvaders.apps.hosted.hypershiftbm.lab"
  port:
    targetPort: 8080
  to:
    name: kubeinvaders
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: Edge
